@@ -1,21 +1,24 @@
 package com.appcenter.practice.service;
 
 
+import com.appcenter.practice.common.StatusCode;
 import com.appcenter.practice.domain.Comment;
+import com.appcenter.practice.domain.Member;
 import com.appcenter.practice.domain.Todo;
 import com.appcenter.practice.dto.reqeust.comment.AddCommentReq;
 import com.appcenter.practice.dto.reqeust.comment.UpdateCommentReq;
-import com.appcenter.practice.dto.response.comment.ReadCommentRes;
+import com.appcenter.practice.dto.response.comment.CommentRes;
 import com.appcenter.practice.exception.CustomException;
-import com.appcenter.practice.common.StatusCode;
 import com.appcenter.practice.repository.CommentRepository;
+import com.appcenter.practice.repository.MemberRepository;
 import com.appcenter.practice.repository.TodoRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static com.appcenter.practice.common.StatusCode.AUTHORIZATION_INVALID;
 
 @Service
 @Transactional(readOnly = true)
@@ -23,37 +26,52 @@ import java.util.stream.Collectors;
 public class CommentService {
     private final CommentRepository commentRepository;
     private final TodoRepository todoRepository;
+    private final MemberRepository memberRepository;
 
 
-    public List<ReadCommentRes> getCommentList(Long todoId){
-        return commentRepository.findAllBytodo(findByTodoId(todoId)).stream()
-                .map(comment-> ReadCommentRes.from(comment))
-                .collect(Collectors.toList());
+    public List<CommentRes> getCommentList(Long todoId){
+        Todo todo=findByTodoId(todoId);
+        List<CommentRes> commentResList=todo.getCommentList().stream()
+                .map(CommentRes::from)
+                .toList();
+        for(CommentRes commentRes : commentResList){
+            if(commentRes.getDeleted())
+                commentRes.setContent("삭제된 댓글입니다.");
+        }
+        return commentResList;
     }
 
-    public ReadCommentRes getComment(Long id){
-        Comment comment=findByCommentId(id);
-        return ReadCommentRes.from(comment);
-    }
+//    public ReadCommentRes getComment(Long id){
+//        Comment comment=findByCommentId(id);
+//        return ReadCommentRes.from(comment);
+//    }
 
     @Transactional
-    public Long saveComment(Long todoId, AddCommentReq reqDto){
+    public CommentRes saveComment(Long memberId, Long todoId, AddCommentReq reqDto){
+        Member member=findByMemberId(memberId);
         Todo todo= findByTodoId(todoId);
-        return commentRepository.save(reqDto.toEntity(todo)).getId();
+        Comment comment=commentRepository.save(reqDto.toEntity(member,todo));
+        return CommentRes.from(comment);
     }
 
     @Transactional
-    public Long updateComment(Long id, UpdateCommentReq reqDto){
-        Comment comment= findByCommentId(id);
-        comment.changeContent(reqDto.getContent());
-        return id;
+    public CommentRes updateComment(Long memberId, Long commentId, UpdateCommentReq reqDto){
+        Member member=findByMemberId(memberId);
+        Comment comment= findByCommentId(commentId);
+        if(checkAuthorization(member,comment))
+            comment.changeContent(reqDto.getContent());
+
+        return CommentRes.from(comment);
     }
 
     @Transactional
-    public Long deleteComment(Long id){
-        Comment comment=findByCommentId(id);
-        comment.changeDeleted(true);
-        return id;
+    public CommentRes deleteComment(Long memberId, Long commentId){
+        Member member=findByMemberId(memberId);
+        Comment comment=findByCommentId(commentId);
+        if(checkAuthorization(member,comment))
+            comment.changeDeleted(true);
+
+        return CommentRes.from(comment);
     }
 
     private Comment findByCommentId(Long id){
@@ -64,5 +82,17 @@ public class CommentService {
     private Todo findByTodoId(Long id){
         return todoRepository.findById(id)
                 .orElseThrow(() -> new CustomException(StatusCode.TODO_NOT_EXIST));
+    }
+
+    private Member findByMemberId(Long id){
+        return memberRepository.findById(id)
+                .orElseThrow(() -> new CustomException(StatusCode.MEMBER_NOT_EXIST));
+    }
+
+    private boolean checkAuthorization(Member member,Comment comment){
+        if(member.getId().equals(comment.getMember().getId()))
+            return true;
+        else
+            throw new CustomException(AUTHORIZATION_INVALID);
     }
 }
